[package]
name = "jito-bam-boost-cli"
version = "1.0.1"
edition = "2021"

[[bin]]
name = "jito-bam-boost-cli"
path = "src/bin/main.rs"

[dependencies]
anyhow.workspace = true
borsh.workspace = true
bytes.workspace = true
clap.workspace = true
env_logger.workspace = true
jito-bam-boost-client.workspace = true
jito-bam-boost-merkle-tree.workspace = true
log.workspace = true
reqwest.workspace = true
serde_json.workspace = true
solana-cli-config.workspace = true
solana-commitment-config.workspace = true
solana-keypair.workspace = true
solana-program-pack.workspace = true
solana-pubkey.workspace = true
solana-rpc-client.workspace = true
solana-transaction.workspace = true
spl-associated-token-account-interface.workspace = true
spl-token-interface.workspace = true
tokio.workspace = true

[lints]
workspace = true
