[package]
name = "jito-bam-boost-merkle-tree"
version = "1.0.0"
edition = "2021"

[dependencies]
csv.workspace = true
fast-math.workspace = true
hex.workspace = true
indexmap.workspace = true
jito-bam-boost-merkle-verify.workspace = true
rand.workspace = true
serde.workspace = true
serde_json.workspace = true
solana-hash.workspace = true
solana-keypair.workspace = true
solana-program.workspace = true
thiserror.workspace = true

[lints]
workspace = true
